handle crawl vnexpress chungkhoan and kinhdoanh page

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-VNEXPRESS_DOMAIN=https://vnexpress.net
+VNEXPRESS_KINHDOANH_DOMAIN=https://vnexpress.net/kinh-doanh
+VNEXPRESS_CHUNGKHOAN_DOMAIN=https://vnexpress.net/kinh-doanh/chung-khoan
 VIETSTOCK_DOMAIN=https://vietstock.vn
 CAFEF_DOMAIN=https://cafef.vn
+CAFEF_CHUNGKHOAN_DOMAIN=https://cafef.vn/timeline/31/
+CAFEF_THITRUONG_DOMAIN=https://cafef.vn/timeline/39/
+KEYWORDS=hoaphat|Hòa Phát|thép|thep|evfta|EVFTA|dungquat|Dung Quất|PVN|HOSE
