--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon --exec babel-node src/index.js",
     "crawl:cafef": "nodemon --exec babel-node src/service/cafef.js",
     "crawl:vnexpress": "nodemon --exec babel-node src/service/vnexpress.js",
-    "crawl:vietstock": "nodemon --exec babel-node src/service/vietstock.js"
+    "crawl:vietstock": "nodemon --exec babel-node src/service/vietstock.js",
+    "crawl:ndh": "nodemon --exec babel-node src/service/ndh.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "cheerio": "^1.0.0-rc.3",
+    "date-fns": "^2.16.0",
     "dotenv": "^8.2.0",
     "esdoc": "^1.1.0",
     "esdoc-es7-plugin": "0.0.3",
