--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ VIETSTOCK_DOMAIN=https://vietstock.vn
 CAFEF_DOMAIN=https://cafef.vn
 CAFEF_CHUNGKHOAN_DOMAIN=https://cafef.vn/timeline/31/
 CAFEF_THITRUONG_DOMAIN=https://cafef.vn/timeline/39/
-KEYWORDS=hoaphat|Hòa Phát|thép|thep|evfta|EVFTA|dungquat|Dung Quất|HRC|hrc|gex|GEX
+VTC_DOMAIN=https://vtv.vn/
+KEYWORDS=VRE|vre|plx|xăng dầu|xăng|dầu|PLX
