--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "crawl:cafef": "nodemon --exec babel-node src/service/cafef.js",
     "crawl:vnexpress": "nodemon --exec babel-node src/service/vnexpress.js",
     "crawl:vietstock": "nodemon --exec babel-node src/service/vietstock.js",
-    "crawl:ndh": "nodemon --exec babel-node src/service/ndh.js"
+    "crawl:ndh": "nodemon --exec babel-node src/service/ndh.js",
+    "crawl:vtc": "nodemon --exec babel-node src/service/vtc.js"
   },
   "repository": {
     "type": "git",
