--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
         "new-cap": 0,
         "consistent-return": 1,
         "max-len": ["error", 120],
-        "no-param-reassign": 0
+        "no-param-reassign": 0,
+        "import/prefer-default-export": 0
     }
 }
