--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ VIETSTOCK_DOMAIN=https://vietstock.vn
 CAFEF_DOMAIN=https://cafef.vn
 CAFEF_CHUNGKHOAN_DOMAIN=https://cafef.vn/timeline/31/
 CAFEF_THITRUONG_DOMAIN=https://cafef.vn/timeline/39/
-VTC_DOMAIN=https://vtv.vn/
-KEYWORDS=VRE|vre|plx|xăng dầu|xăng|dầu|PLX
+VTV_DOMAIN=https://vtv.vn/
+KEYWORDS=bđs|khu công nghiệp|lhg|msn|masan|hpg|hòa phát|quặng sắt|thép|kbc|bất động sản KCN|bất động sản công nghiệp
