--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ CAFEF_DOMAIN=https://cafef.vn
 CAFEF_CHUNGKHOAN_DOMAIN=https://cafef.vn/timeline/31/
 CAFEF_THITRUONG_DOMAIN=https://cafef.vn/timeline/39/
 VTV_DOMAIN=https://vtv.vn/
-KEYWORDS=bđs|khu công nghiệp|lhg|msn|masan|hpg|hòa phát|quặng sắt|thép|kbc|bất động sản KCN|bất động sản công nghiệp
+KEYWORDS=hpg|hòa phát|thép|gex|nkg|quặng sắt|gelex|frt
