--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ CAFEF_DOMAIN=https://cafef.vn
 CAFEF_CHUNGKHOAN_DOMAIN=https://cafef.vn/timeline/31/
 CAFEF_THITRUONG_DOMAIN=https://cafef.vn/timeline/39/
 VTV_DOMAIN=https://vtv.vn/
-KEYWORDS=hpg|hòa phát|thép|quặng sắt|tpb|acb|TPBank|pvt|gex|gelex|ssi
+KEYWORDS=hpg|hòa phát|thép|quặng sắt|hsg|nkg|nam kim|kbc|kinh bắc|hoa sen
