--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ CAFEF_DOMAIN=https://cafef.vn
 CAFEF_CHUNGKHOAN_DOMAIN=https://cafef.vn/timeline/31/
 CAFEF_THITRUONG_DOMAIN=https://cafef.vn/timeline/39/
 VTV_DOMAIN=https://vtv.vn/
-KEYWORDS=hpg|hòa phát|thép|quặng sắt|hsg|gvr|cao su|vnd|vci|hhv|plc
+KEYWORDS=hpg|hòa phát|thép|quặng sắt|hsg|gvr|cao su|vnd|vci|hhv|idj|ssi|kbc|kinh bắc
